@@ -122,7 +122,7 @@ public final class SmooksEdFiVisitor implements SAXElementVisitor {
 
                 } else {
                     String type = neutralRecord.getRecordType();
-                    Long count = duplicateCounts.containsKey(type) ? duplicateCounts.get(type) : new Long(0);
+                    Long count = duplicateCounts.containsKey(type) ? duplicateCounts.get(type) : Long.valueOf(0);
                     duplicateCounts.put(type, new Long(count.longValue() + 1));
                 }
             }
